--- a/radar/landing-page/css/creative.css
+++ b/radar/landing-page/css/creative.css
@@ -4,6 +4,24 @@
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 
+.smallcaps
+{
+  font-weight: 300;
+font-size: 0.6em;
+display: block;
+color: #79869f;
+margin-top: -2px;
+text-transform: uppercase;
+}
+
+.features
+{
+  display: block;
+  font-size: 0.7em;
+  font-weight:300;
+  margin-top: -2px;
+}
+
 html, body {
   width: 100%;
   height: 100%;
@@ -142,6 +160,11 @@ header {
   -o-background-size: cover;
 }
 
+.header-none
+{
+  height: 0px;
+}
+
 .header3{
   background-image: url(../img/header3.jpg);
 }
@@ -206,6 +229,23 @@ header .header-content .header-content-inner p {
   margin: 50px auto 0;
   max-width: 400px;
 }
+
+.service-box ul
+{
+  list-style: circle;
+  line-height: 1.5rem;
+}
+
+.service-box ul li
+{
+  margin-bottom: 2rem;
+}
+
+.service-box ul li span
+{
+  color: #69696f;
+}
+
 @media(min-width:992px) {
   .service-box {
     margin: 20px auto 0;
