--- a/radar/landing-page/css/creative.css
+++ b/radar/landing-page/css/creative.css
@@ -27,7 +27,7 @@ html, body {
   height: 100%;
 }
 body {
-  font-family: Merriweather, 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
 }
 .navbar-nav .btn-primary {
   padding-top: 10px;
