--- a/portfolio/css/clean-blog.css
+++ b/portfolio/css/clean-blog.css
@@ -174,6 +174,8 @@ hr.small {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 300;
   margin: 10px 0 0;
+      background-color: rgba(0,0,0,0.3);
+      padding: 10px 0px;
 }
 @media only screen and (min-width: 768px) {
   .intro-header .site-heading h1,
